# argparse

./: .bazelrc  .clang-tidy  .gitignore  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  WORKSPACE.bazel  clang_format.bash  conanfile.py  xmake.lua
.clusterfuzzlite/: Dockerfile  README.md  build.sh  fuzz_argparse.cpp  project.yaml
.github/workflows/: cflite_pr.yml  ci.yml  static_analysis.yml  tidy-analysis-stage-01.yml  tidy-analysis-stage-02.yml
include/: argparse.hpp
include/argparse/: argparse.hpp  main.cpp  test  test.cpp
module/: argparse.cppm
samples/: BUILD.bazel  CMakeLists.txt  add_sample.bzl  compound_arguments.cpp  custom_assignment_characters.cpp  custom_prefix_characters.cpp  description_epilog_metavar.cpp  gathering_remaining_arguments.cpp  is_used.cpp  joining_repeated_optional_arguments.cpp  list_of_arguments.cpp  negative_numbers.cpp  optional_flag_argument.cpp  parse_known_args.cpp  positional_argument.cpp  repeating_argument_to_increase_value.cpp  required_optional_argument.cpp  subcommands.cpp
src/: argparse.hpp
test/: BUILD.bazel  CMakeLists.txt  README.md  argparse_details.cppm  doctest.hpp  main.cpp  test_actions.cpp  test_actions.hpp  test_append.cpp  test_approximate_arguments.cpp  test_as_container.cpp  test_bool_operator.cpp  test_choices.cpp  test_compound_arguments.cpp  test_compound_arguments.hpp  test_const_correct.cpp  test_container_arguments.cpp  test_container_arguments.hpp  test_copy_constructor.cpp  test_default_args.cpp  test_default_value.cpp  test_equals_form.cpp  test_error_reporting.cpp  test_get.cpp  test_help.cpp  test_help.hpp  test_hidden_alias.cpp  test_hidden_argument.cpp  test_invalid_arguments.cpp  test_invalid_arguments.hpp  test_is_used.cpp  test_issue_37.cpp  test_issue_37.hpp  test_mutually_exclusive_group.cpp  test_negative_numbers.cpp  test_negative_numbers.hpp  test_optional_arguments.cpp  test_optional_arguments.hpp  test_parent_parsers.cpp  test_parent_parsers.hpp  (+17 more)
tests/: CMakeLists.txt  README.md  catch.hpp  main.cpp  test_actions.hpp  test_add_argument.hpp  test_compound_arguments.hpp  test_container_arguments.hpp  test_implicit_values.hpp  test_optional_arguments.hpp  test_parent_parsers.hpp  test_parse_args.hpp  test_positional_arguments.hpp  test_vector_list_arguments.hpp
tools/: CMakeLists.txt  static_analysis_setup.sh  tidy-base.cpp
