cmake_minimum_required(VERSION 3.12)
project(argparse)

file(GLOB ARGPARSE_LINT_SOURCES
    tidy-base.cpp
)
ADD_EXECUTABLE(ARGPARSE_LINT ${ARGPARSE_LINT_SOURCES})
set_target_properties(ARGPARSE_LINT PROPERTIES OUTPUT_NAME tidy-base)
set_property(TARGET ARGPARSE_LINT PROPERTY CXX_STANDARD 17)
INCLUDE_DIRECTORIES("../include" ".")
